--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-slate
 title: Защита
 description: Установка и обслуживание домофонов
 github: none
+github.is_project_page: none
