--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,42 @@
-theme: jekyll-theme-slate
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing these this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+email: domofon2@mail.ru
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://ivdomofon.ru" # the base hostname & protocol for your site
+
+# Social
+githubUsername:
+twitterUsername:
+dribbbleUsername:
+codepenUsername:
+
+# Build settings
+markdown: kramdown
+
+themeColor: red
+fixedNav: 'true' # true or false
+
+permalink: /:year/:month/:title
+markdown: kramdown
+include: [_pages]
+exclude: [_site, CHANGELOG.md, LICENSE, README.md]
+sass:
+  style: compressed
+
 title: Защита
 description: Установка и обслуживание домофонов
-github: 
-  is_project_page: false
+github: none
+#  is_project_page: false
